that all the aesthetics for now

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -62,7 +62,7 @@
 
 .big-logo {
   h2, a {
-    padding-top: 20px;
+    // padding-top: 20px;
     font-family: 'Lobster', cursive;
     color: $grayLight;
     font-weight: 400;
