--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container narrow-container">
 	<div class="row-fluid">
     <div class="span6">
       <dl>
@@ -12,7 +12,6 @@
       <%= link_to "Reset your password" %>
     </div>
     <div class="span6">
-      <h3>Your Purchases</h3>
     </div>
   </div>
 </div>
