--- a/app/views/application/_current_user_menu.html.erb
+++ b/app/views/application/_current_user_menu.html.erb
@@ -1,8 +1,11 @@
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %> <i class="icon-user"></i></b></a>
   <ul class="dropdown-menu">
-    <li><%= link_to "Save your Account", signup_path if current_user.guest? %></li>
-    <li><%= link_to "User Account", user_path(current_user) unless current_user.guest? %></li>
+    <% if current_user.guest? %>
+      <li><%= link_to "Save your Account", signup_path  %></li>
+    <% else %>
+      <li><a href="#user-profile" data-toggle="modal">Your Account</a></li>
+    <% end %>
     <% if current_user.events.empty? %>
       <li><%= link_to "New Event", new_organizer_event_path %></li>
     <% else %>
@@ -13,3 +16,4 @@
     <li><%= link_to "Sign out", logout_path %></li>
   </ul>
 </li>
+<%= render 'user_profile' %>
