hold off fontface declaration yet to see if https works

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -6,7 +6,7 @@
 }
 
 // Fonts
-@import url(http://fonts.googleapis.com/css?family=Cabin|Lobster|Merriweather|Open+Sans);
+@import url(https://fonts.googleapis.com/css?family=Cabin|Lobster);
 
 
 /* Responsive dimensions */
