--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -13,7 +13,7 @@
       <div class="row-fluid">
         <div class="span7">
           <h2>
-            <article>(much) Better Events for Artists & Organizers</article>
+            <span>Artist-first Events</span>
           </h2> <br>
           <%= link_to "Try it free", guest_profiles_path, method: :post, class: 'btn btn-large btn-success' %>
         </div>
