--- a/app/assets/javascripts/events.js.coffee.erb
+++ b/app/assets/javascripts/events.js.coffee.erb
@@ -51,7 +51,7 @@ $ ->
 # backSretch
 $ ->
   if $("#event-information").length
-    $("#event-information").backstretch($(".event-poster").data('url'))
+    $(".poster-information").backstretch($(".event-poster").data('url'))
 
 # Disable stripe-button if email field is blank
 $ ->
