--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -33,11 +33,39 @@
     @extend .alert-error;
     &:first-letter { text-transform: uppercase };
   }
+
+  .link-button {
+    text-decoration: none;
+    border: none;
+    background-color: transparent;
+    display: block;
+    padding: 3px 20px;
+    clear: both;
+    font-weight: normal;
+    line-height: 20px;
+    color: #333333;
+    white-space: nowrap;
+
+    &:hover,
+    &:focus {
+      color: #ffffff;
+      background-color: #0081c2;
+      background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
+      background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
+      background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
+      background-image: -o-linear-gradient(top, #0088cc, #0077b3);
+      background-image: linear-gradient(to bottom, #0088cc, #0077b3);
+      background-repeat: repeat-x;
+      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0);
+    }
+  }
 }
 
 //event show
 .poster-information {
-  // min-height: 300px;
+  #inlay {
+    background: rgba(0, 0, 0, 0.7);
+  }
 }
 
 .flex-video {
@@ -96,25 +124,6 @@
   display: inline-block;
 }
 
-// buttons styled to look like dropdown menu links
-
-.link-button {
-  text-decoration: none;
-  border: none;
-  background-color: transparent;
-  font-weight: normal;
-  padding: 8px 12px;
-  line-height: 20px;
-  color: #08C;
-  border: 1px solid #DDD;
-
-  &:hover,
-  &:focus {
-    z-index: 2;
-    border-color: #ddd;
-    background-color: #eeeeee;
-  }
-}
 
 .event-header  {
   background-image: url(image_path('tex2res5.png'));
