--- a/app/views/application/_current_user_menu.html.erb
+++ b/app/views/application/_current_user_menu.html.erb
@@ -13,6 +13,9 @@
       <li> <%= link_to "Check-in", organizer_event_tickets_path(current_user.events.first) %>  </li>
     <% end %>
     <li class="divider"></li>
+    <% if !current_user.guest? && current_user.state == :unconfirmed %>
+      <li><%= link_to "Confirm your email", email_confirmations_path, method: :post %></li>
+    <% end %>
     <li><%= link_to "Sign out", logout_path %></li>
   </ul>
 </li>
