--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -34,7 +34,7 @@
     &:first-letter { text-transform: uppercase };
   }
 
-  .link-button {
+  .link-button-show {
     text-decoration: none;
     border: none;
     background-color: transparent;
@@ -59,7 +59,27 @@
       filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0);
     }
   }
+
 }
+
+.link-button {
+    text-decoration: none;
+    border: none;
+    background-color: transparent;
+    font-weight: normal;
+    padding: 8px 12px;
+    line-height: 20px;
+    color: #08C;
+    border: 1px solid #DDD;
+
+    &:hover,
+    &:focus {
+      z-index: 2;
+      border-color: #ddd;
+      background-color: #eeeeee;
+    }
+  }
+
 
 //event show
 .poster-information {
