--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -53,7 +53,7 @@
 			<div class="row-fluid">
 				<div class="span6">
 					<h1><i class="icon-info-sign muted" id="about"></i></h1>
-					<div class="about-event" ><%= @event.about_section %><%= render 'instructions' if @event.about.empty? %></div>
+					<div class="about-event" ><%= @event.edit_icon %><%= @event.about_section %><%= render 'instructions' if @event.about.empty? %></div>
 				</div>
 				<div class="span6">
 					<h1><i class="icon-map-marker muted" id="location"></i></h1>
