--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -9,11 +9,11 @@
     </div>
   </div>
   <div class="row-fluid">
-    <div class="span12 headline paper-folds">
+    <div class="headline paper-folds span12 ">
       <div class="row-fluid">
-        <div class="span7">
+        <div class="span8">
           <h2>
-            <span>Artist-first Events</span>
+            <span>Tour the World without a record label.</span>
           </h2> <br>
           <%= link_to "Try it free", guest_profiles_path, method: :post, class: 'btn btn-large btn-success' %>
         </div>
