--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -82,11 +82,11 @@
 			</div>
 			<hr>
 			<div class="row-fluid">
-				<div class="span6">
+				<div class="span6" id="event-vimeo">
 					<h1><i class="icon-film muted" id="music"></i></h1>
 						<%= @event.edit_icon %> <%= @event.video %><div class="flex-video"><%= @event.video_iframe %></div>
 				</div>
-				<div class="span6">
+				<div class="span6" id="event-playlist">
 					<h1><i class="icon-headphones muted" id="music"></i></h1>
 						<%= @event.edit_icon %> <%= @event.music %><%= @event.music_iframe %>
 				</div>
