added jquery ui images

--- a/app/assets/javascripts/events.js.coffee.erb
+++ b/app/assets/javascripts/events.js.coffee.erb
@@ -71,3 +71,8 @@ $ ->
 
   $(".collapse").on "hide", ->
     $(this).parent().find("i").removeClass("icon-minus").addClass "icon-plus"
+
+# Timepicker
+
+$ ->
+  $('.timepicker').timepicker();
