now map is working

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -58,7 +58,7 @@
 				<div class="span6">
 					<h1><i class="icon-map-marker muted" id="location"></i></h1>
 					<div class="row-fluid" >
-						<div class="span6 event-map"><%= @event.map %></div>
+						<div class="span6 event-map address"><%= @event.map %></div>
 						<div class="span6 event-map venue-info">
 							<dl>
 								<dt>Venue:</dt>
