--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -1,3 +1,5 @@
 <div class="span6 event-map address">
-  <%= image_tag "http://maps.google.com/maps/api/staticmap?size=250x250&sensor=false&zoom=16&markers=#{@location.latitude}%2C#{@location.longitude}" %>
+  <a href="https://maps.google.com/?ll=<%= @location.latitude %>,<%= @location.longitude %>">
+    <%= image_tag("https://maps.google.com/maps/api/staticmap?size=250x250&sensor=false&zoom=16&markers=#{@location.latitude}%2C#{@location.longitude}") %>
+  </a>
 </div>
