--- a/app/assets/javascripts/events.js.coffee.erb
+++ b/app/assets/javascripts/events.js.coffee.erb
@@ -46,7 +46,8 @@ $ ->
 
 # Jquery Ui Datepicker
 $ ->
-  $.datepicker.setDefaults()
+  $.datepicker.setDefaults
+    dateFormat: 'MM dd, yy'
 
 # Tooltips and popovers
 $ ->
