--- a/app/views/organizer/events/show.html.erb
+++ b/app/views/organizer/events/show.html.erb
@@ -25,7 +25,7 @@
       <div class="accordion-group">
         <div class="accordion-heading">
           <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
-            Event Stats <i class="icon-plus"></i>
+            Event Stats <i class="icon-plus itoggle"></i>
           </a>
         </div>
         <div id="collapseFour" class="accordion-body collapse">
@@ -47,7 +47,7 @@
       <div class="accordion-group">
         <div class="accordion-heading">
           <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-            Charge Options <i class="icon-plus"></i>
+            Charge Options <i class="icon-plus itoggle"></i>
           </a>
         </div>
         <div id="collapseOne" class="accordion-body collapse">
@@ -66,7 +66,7 @@
       <div class="accordion-group">
         <div class="accordion-heading">
           <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-            Event Options <i class="icon-plus"></i>
+            Event Options <i class="icon-plus itoggle"></i>
           </a>
         </div>
         <div id="collapseTwo" class="accordion-body collapse">
@@ -85,7 +85,7 @@
       <div class="accordion-group" is="event-accordian">
         <div class="accordion-heading">
           <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
-            Filter Orders <i class="icon-plus"></i>
+            Filter Orders <i class="icon-plus itoggle"></i>
           </a>
         </div>
         <div id="collapseThree" class="accordion-body collapse">
