yet more cosmetic changes

--- a/app/assets/javascripts/events.js.coffee.erb
+++ b/app/assets/javascripts/events.js.coffee.erb
@@ -56,7 +56,7 @@ $ ->
 # backSretch
 $ ->
   if $("#event-information").length
-    $(".poster-information").backstretch($(".event-poster").data('url'))
+    $(".event-header").backstretch($(".event-poster").data('url'))
 
 # Disable stripe-button if email field is blank
 $ ->
