--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,10 +1,10 @@
 <% if @event.visible?|| @event.event_owner? %>
 	<% @event.header %>
 	<div class="container" id="event-background">
-		<section id="event-information" class="event">
-			<div class="row-fluid event-header">
-				<div class="span12">
-					<hr>
+		<section id="event-information">
+			<hr>
+			<div class="row-fluid">
+				<div class="span12 event-header">
 					<h2>
 						<small><%= @organizer.name || "no name" %> presents </small><br>
 						<%= @event.edit_icon %> <%= @event.title %><br>
@@ -26,30 +26,44 @@
 			        </ul>
 			      </div>
 			    <% end %>
-					<hr>
 				</div>
 			</div>
-			<div class="row-fluid poster-information" id="inlay">
+			<hr>
+			<div class="row-fluid poster-information=" id="inlay">
 				<div class="span6 event-poster" data-url='<%= @event.image %>'>
-					<h3><small>Featuring:</small> <%= @event.edit_icon %> <%= @event.artist %></h3>
-					<% if @event.on_sale? %>
-						<h3><small>We need </small><%= @event.sales %><small> more patrons to pay for this show please help!</small></h3>
-					<% else %>
-						<h3> <small>Ticket sales for this event have now finished. Thanks for your support!</small></h3>
-					<% end %>
-					<h3><i class="icon-twitter-sign"></i> <i class="icon-facebook-sign"></i></h3>
+					<h1><i class="icon-info-sign muted" id="location"></i></h1>
+					<div class="">
+						<h3> <%= @event.edit_icon %> <%= @event.artist %></h3>
+						<h3>
+							<i class="icon-twitter-sign"></i>
+							<i class="icon-facebook-sign"></i>
+							<i class="icon-google-plus-sign"></i>
+							<i class="icon-link"></i>
+						</h3>
+					</div>
+						<% if @event.on_sale? %>
+							<h3><small>Funding: </small><br><%= @event.sales %> left to go!</h3>
+							<div class="progress muted">
+							  <div class="bar" style="width: 60%;"></div>
+							</div>
+						<% else %>
+							<h3> <small>Ticket sales for this event have now finished. Thanks for your support!</small></h3>
+						<% end %>
 				</div>
 				<div class="span6 event-ticket-orders" data-price='<%= @event.ticket_price %>' id="tickets">
-					<% if @event.on_sale? %>
-						<h3><%= @event.edit_icon %> <%= @event.price %><small> each</small></h3>
-						<%= @event.ticket_form %>
-						<h3><%= @event.order_total %>
-							<small><span class="charge-info" data-toggle="popover" title="" data-content="Card Processing is 2.9% + 30c + our fee (1% - 2.5% dependant on the type of event)" data-original-title="Processing Fees" data-placement="bottom">
-								inc.charges
-							  </span>
-      				</small>
-      		</h3>
-					<% end %>
+					<h1><i class="icon-shopping-cart muted" id="location"></i></h1>
+					<div class="pagination-centered">
+						<% if @event.on_sale? %>
+							<h3><%= @event.edit_icon %> <%= @event.price %><small> each</small></h3>
+							<%= @event.ticket_form %>
+							<h3><%= @event.order_total %>
+								<small><span class="charge-info" data-toggle="popover" title="" data-content="Card Processing is 2.9% + 30c + our fee (1% - 2.5% dependant on the type of event)" data-original-title="Processing Fees" data-placement="bottom">
+									inc.charges
+								  </span>
+	      				</small>
+	      			</h3>
+						<% end %>
+					</div>
 				</div >
 			</div>
 		</section>
@@ -57,7 +71,7 @@
 		<section id="event-media" class="event">
 			<div class="row-fluid">
 				<div class="span6">
-					<h1><i class="icon-info-sign muted" id="about"></i></h1>
+					<h1><i class="icon-quote-left muted" id="about"></i></h1>
 					<div class="about about-event"><%= @event.edit_icon %> <%= @event.about_section %></div>
 				</div>
 				<div class="span6">
@@ -74,7 +88,7 @@
 									  <%= @event.edit_icon %> <%= @event.venue_address %>
 									</address>
 								</dd>
-								<dt>Event begins at:</dt>
+								<dt>Doors open at:</dt>
 								<dd><%= @event.edit_icon %> <%= @event.doors %></dd>
 							</dl>
 							<% unless @organizer.guest? %>
