still need to do media queries for handheld

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -166,5 +166,12 @@ small {
 }
 
 .event-funding {
-  padding: 10px 0;
+  text-align: center;
+  h4 {
+    padding: 20px 0;
+  }
+  .progress {
+    max-width: 75%;
+    margin: auto;
+  }
 }
