added copy event method

--- a/app/assets/javascripts/events.js.coffee.erb
+++ b/app/assets/javascripts/events.js.coffee.erb
@@ -45,6 +45,8 @@ $ ->
 
 # Jquery Ui Datepicker
 $ ->
+  $("input.datepicker").datepicker()
+
   $.datepicker.setDefaults
     dateFormat: 'MM dd, yy'
 
