--- a/app/views/organizer/events/_form.html.erb
+++ b/app/views/organizer/events/_form.html.erb
@@ -8,7 +8,7 @@
     <%= f.input :venue, label: "Name of Venue", placeholder: "The Rickshaw" %>
     <%= f.input :new_location, label: "Location of Venue", hint: "Dublin, Ireland" %>
     <%= f.input :capacity, placeholder: "100" %>
-    <%= f.input :date, label: "Date of Event" %>
+    <%= f.input :date, as: :datepicker, label: "Date of Event" %>
     <%= f.input :doors, label: "Event start time" %>
     <%= f.input :ticket_price, placeholder: "10.50" %>
     <%= f.input :target, label: "Target Attendence", placeholder: "100" %>
