--- a/app/views/organizer/events/show.html.erb
+++ b/app/views/organizer/events/show.html.erb
@@ -1,18 +1,20 @@
 <div class="row-fluid">
   <div class="span12">
     <ul class="inline">
-      <div class="btn-group">
-        <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-          <%= @event.title %>
-          <span class="caret"></span>
-        </a>
-        <ul class="dropdown-menu">
-          <% @events.each do |e| %>
-          <li><%= link_to "#{e.title} | #{e.date.strftime('%d %b')}", organizer_event_path(e) %></li>
-          <% end %>
-        </ul>
-      </div>
-      <div class="pull-right"><%= render 'search' %></div>
+      <li>
+        <div class="btn-group">
+          <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+            <%= @event.title %>
+            <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu">
+            <% @events.each do |e| %>
+            <li><%= link_to "#{e.title} | #{e.location.city} | #{e.date.strftime('%d %b')}", organizer_event_path(e) %></li>
+            <% end %>
+          </ul>
+        </div>
+      </li>
+       <li class="pull-right"><%= render 'search' %></li>
     </ul>
   </div>
 </div>
